--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,8 @@ default: &default
 
 development:
   <<: *default
-  username: loginUser
-  database: loginappdev
+  username: logUser
+  database: logapp_dev
   password: password
 
   # The specified database role being used to connect to postgres.
@@ -59,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: loginapptest
+  database: logapp_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: loginappproduction
+  database: logapp_prod
   username: loginUser
   password: <%= ENV['LOGAPP_DATABASE_PASSWORD'] %>
