--- a/config/database.yml
+++ b/config/database.yml
@@ -23,9 +23,10 @@ default: &default
 
 development:
   <<: *default
-  username: logUser
+  username: loguser
   database: logapp_dev
   password: password
+
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -83,5 +84,5 @@ test:
 production:
   <<: *default
   database: logapp_prod
-  username: loginUser
+  username: loguser
   password: <%= ENV['LOGAPP_DATABASE_PASSWORD'] %>
