--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 
 # Ignore uploaded files in development
 /storage/*
+/config/config.yml
+/config/attribute-map.yml
 
 /node_modules
 /yarn-error.log
