--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "async": "^2.6.1",
     "debug": "^4.1.0",
     "fs": "0.0.1-security",
-    "underscore": "^1.9.1",
-    "xml-crypto": "^1.0.2",
-    "xml-encryption": "^0.11.2",
-    "xml2js": "^0.4.19"
+    "underscore": "^1.8.3",
+    "url": "^0.11.0",
+    "xml-crypto": "^0.10.0",
+    "xml-encryption": "^0.11.0",
+    "xml2js": "^0.4.0",
+    "xmlbuilder": "~2.2.0",
+    "xmldom": "^0.1.0"
   }
 }
